--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "morgan": "^1.10.0"
   }
 }
