--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jose Sabas Pineda Merino",
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/luxon": "^3.4.2",
     "@types/morgan": "^1.9.9",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mysql2": "^3.9.7",
     "ts-node-dev": "^2.0.0"
   },
